E şıkkı eklendi Tüm işlemler method haline alındı ve kısaltmalar yapıldı kullanıcı girişi için olusturulan static değeri set edildi kullanıcı adı yerine id bastık tabloda skorlarım bir panel içinde toplandı skorlar adın bir sınıf oluşturuldu ve tüm olusturulan degiskenler bu sınıftan oluşturulan nesnelere aktarıldı

--- a/BilgiYarismasi/FrmOyun.resx
+++ b/BilgiYarismasi/FrmOyun.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pctDogruCevap.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         R0lGODlhkAGQAZEDAN/m34fChze3N////yH/C05FVFNDQVBFMi4wAwEAAAAh+QQFBAADACwAAAAAkAGQ
         AQAC/5yPqcvtD6OctNqLs968+w+G4kiW5omm6sq27gvH8kzX9o3n+s73/g8MCofEovGITCqXzKbzCY1K
@@ -290,7 +290,7 @@
         AAEAAQAAAgJcAQAh+QQFBAADACwAAAAAAQABAAACAlwBACH5BAUEAAMALAAAAAABAAEAAAICXAEAOw==
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pctYanlisCevap.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         R0lGODlh4AHgAfECAO4AAO0AAAAAAAAAACH/C05FVFNDQVBFMi4wAwEAAAAh+QQFCAACACwAAAAA4AHg
         AQAC/5SPqcvtD6OctNqLs968+w+G4kiW5omm6sq27gvH8kzX9o3n+s73/g8MCofEovGITCqXzKbzCY1K
